infrastructure/k8s/backend-webservice/backend-webservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autopilot-drone-backend-webservice
  namespace: autopilot-drone
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  selector:
    app: autopilot-drone-backend-webservice
