infrastructure/k8s/backend-webservice/backend-webservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: autopilot-drone-backend-webservice
  namespace: autopilot-drone
spec:
  ingressClassName: nginx
  rules:
  - host: api.pyxieportal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: autopilot-drone-backend-webservice
            port:
              number: 5000
  tls:
  - hosts:
    - pyxieportal.com
    secretName: letsencrypt-prod
